Fix list visibility in hover, change from visibility to display prop

--- a/css/style.css
+++ b/css/style.css
@@ -60,18 +60,16 @@ header nav img {
 header ul {
     list-style: none;
     background-color: #F6F6F6;
-    display: flex;
-    flex-direction: column;
     padding: 0;
     width: 12rem;
     position: relative;
     top: 3.5rem;
-    visibility: hidden;
+    display: none;
     transition: 0s ease all;
 }
 
 .links:hover > ul {
-    visibility: visible;
+    display: block;
 }
 
 header ul::before {
@@ -87,12 +85,7 @@ header ul li {
     height: 3rem;
     line-height: 3rem;
     padding-left: 1rem;
-    visibility: hidden;
     transition: .3s ease padding-left;
-}
-
-.links:hover > ul > li {
-    visibility: visible;
 }
 
 header ul li:hover {
